--- a/css/style.css
+++ b/css/style.css
@@ -609,10 +609,11 @@ html {
 }
 
 .box{
-  box-shadow: 0px 6px 8px -6px rgba(24, 39, 75, 0.12), 0px 8px 16px -6px rgba(24, 39, 75, 0.08)
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
 }
 
 .toast{
+  padding: 20px;
   position: absolute;
   -webkit-backdrop-filter: blur(133px);
           backdrop-filter: blur(133px);
@@ -626,7 +627,7 @@ html {
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
   font-weight: bold;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
   font-size: 20px;
   display: flex;
   align-items: center;
@@ -1128,6 +1129,10 @@ html {
   transition-duration: 150ms;
 }
 
+.duration-300 {
+  transition-duration: 300ms;
+}
+
 .duration-500 {
   transition-duration: 500ms;
 }
@@ -1138,10 +1143,6 @@ html {
 
 .duration-\[0\.5s\] {
   transition-duration: 0.5s;
-}
-
-.duration-300 {
-  transition-duration: 300ms;
 }
 
 @media (min-width: 640px) {
@@ -1285,10 +1286,6 @@ html {
 
 .hover\:opacity-80:hover {
   opacity: 0.8;
-}
-
-.hover\:opacity-70:hover {
-  opacity: 0.7;
 }
 
 .hover\:opacity-90:hover {
